webapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      imagePullSecrets:
      - name: myregistrykey
      containers:
      - name: web-app-container
        image: dhairya22/shareitinerary:latest
        ports:
        - containerPort: 9090 # where the pod of postgres is running
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 9090   # port address where service is running
      targetPort: 9090 # to transfer the incoming request to the port
      nodePort: 30300
